--- a/index.html
+++ b/index.html
@@ -2,17 +2,27 @@
 <head>
 
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Allows students to sell their products">
     <meta name="author" content="Edgar Bahena">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <title>Home Page</title>
 
+    <link rel="stylesheet" href="css/home.css">
 
 </head>
 
 <body>
 
+    <div class="container">
+        <button class="logout">log out</button>
+        <h1 class="greeting">hello user</h1>
 
+    </div>
+
+
+    <!-- script tag defines a client-side script-->
+    <script src="js/home.js"></script>
 
 
 
