--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <title>Home Page</title>
 
-    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="./css/home.css">
 
 </head>
 
@@ -22,7 +22,7 @@
 
 
     <!-- script tag defines a client-side script-->
-    <script src="js/home.js"></script>
+    <script src="./js/home.js"></script>
 
 
 
