Configured all files to be in public root

--- a/public/login.html
+++ b/public/login.html
@@ -12,8 +12,7 @@
 <body>
 
     <div class="alert-box">
-        <p class="alert">msg</p>
-
+        <p class="alert">Username Or Email is Incorrect</p>
     </div>
 
 
