--- a/public/login.html
+++ b/public/login.html
@@ -22,7 +22,7 @@
         <input type="password" placeholder="password" autocomplete="off" class="passwprd" required>
         
         <button class="submit-btn">log in</button>
-        <a href="#" class="link">don't have an account? Register one</a>
+        <a href="/register" class="link">don't have an account? Register one</a>
     </div>
 
 
