--- a/public/register.html
+++ b/public/register.html
@@ -21,7 +21,7 @@
         <input type="password" placeholder="password" autocomplete="off" class="password" required>
 
         <button class="submit-btn">register</button>
-        <a href="#" class="link">already have an account ? log in here</a>
+        <a href="/login" class="link">already have an account ? log in here</a>
     </div>
 
 
