--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
     <div class="container">
         <button class="logout">log out</button>
-        <h1 class="greeting">hello user</h1>
+        <h1 class="greeting"></h1>
 
     </div>
 
